--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -151,6 +151,12 @@
       p.first
         @extend .major
 
+  .age_and_retirement
+    .form_fields
+      label
+        display: block
+        text-transform: none
+
   .half_of_american_households
     @extend .spread
 
