--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -22,10 +22,10 @@ $caslon-bold-italic: 'Adobe Caslon W01 Bd It'
 $proxima-bold: 'Proxima N W01 Bold'
 $proxima-semibold: 'Proxima N W01 Smbd'
 
-$font-chapter: $bodoni, 'Times New Roman', Times, serif
+$font-chapter: $bodoni, Georgia, 'Times New Roman', Times, serif
 $font-heading: $proxima-bold, 'Century Gothic', Helvetica, Arial, sans-serif
 $font-subheading: $proxima-semibold, 'Century Gothic', Helvetica, Arial, sans-serif
-$font-body: $caslon, 'Times New Roman', Times, serif
+$font-body: $caslon, Georgia, 'Times New Roman', Times, serif
 
 $font-size: 16px
 $font-size-small: 12px
