--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -357,14 +357,16 @@ section
   width: $desktop
 
 .form_question,
+.results h2,
 .conclusion_section
   background: $green
   color: #fff
   font-family: $proxima-bold
   font-size: 28px
+  line-height: 1.3
   margin: 0 0 0 -2.5%
   text-transform: uppercase
-  padding: 1em 0 .9em
+  padding: .75em 0 .6em
   text-align: center
   width: 105%
 
@@ -374,13 +376,35 @@ section
   margin: 0 auto
   overflow: hidden
 
-  label
+  &.padding
+    padding: 1em
+
+  .field_title
     font-size: 20px
     text-transform: uppercase
+
+    strong
+      font-family: $proxima-bold
+      font-weight: normal
 
     span
       display: inline-block
       margin: 0 .5em
+
+  .field
+    &.radio_buttons
+      label
+        margin: .25em 0
+
+  label
+    display: block
+    font-size: 18px
+
+    strong
+      font-family: $proxima-bold
+      font-weight: normal
+
+
 
 
 // Animations
