--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -4,7 +4,8 @@
     padding: 24em 0 10em
 
     .background_image
-      background-image: image-url('5/man_standing-medium.jpg')
+      @include multi-background("5/man_standing")
+      background-position: center -200px
 
     .contents
       max-width: 900px
