--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -152,6 +152,16 @@
         @extend .major
 
   .age_and_retirement
+    #under_65
+      display: block
+    #over_65
+      display: none
+
+    &.show_over_65
+      #under_65
+        display: none
+      #over_65
+        display: block
     .form_fields
       label
         display: block
