replace radio buttons where applicable

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -394,3 +394,27 @@ section
 
   100%
     opacity: .8
+
+input[type="radio"]
+  -webkit-appearance: none
+  -moz-appearance: none
+  display: inline-block
+  background-image: image-url("radio_button-open.png")
+  background-repeat: no-repeat
+  width: 25px
+  height: 25px
+  top: 8px
+  &:checked
+    background-image: image-url("radio_button-filled.png")
+
+
+
+
+
+
+
+
+
+
+
+
