--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -165,9 +165,7 @@
 
         label
           float: left
-          padding-right: 10%
-          text-align: right
-          width: 50%
+          width: 45%
 
         input
           float: left
@@ -179,6 +177,146 @@
           text-align: center
           line-height: 1
           padding-top: 5px
+
+  .retirement_expectations
+    @extend .age-all
+
+    p
+      font-size: 19px
+
+    .contents
+      margin-bottom: 5em
+
+    .splitbars .splitbars-container div.third span
+      left: -15px
+
+    .splitbars .splitbars-container div.fourth span
+      left: -20px
+
+    &.age-all
+      .twothousandthree-pre65
+        width: 37%
+
+      .twothousandthree-65older
+        width: 49%
+
+      .twothousandthree-never
+        width: 6%
+
+      .twothousandthree-dunno
+        width: 8%
+
+      .twothousandthirteen-pre65
+        width: 23%
+
+      .twothousandthirteen-65older
+        width: 61%
+
+      .twothousandthirteen-never
+        width: 8%
+
+      .twothousandthirteen-dunno
+        width: 8%
+
+    &.age-25-34
+      .twothousandthree-pre65
+        width: 37%
+
+      .twothousandthree-65older
+        width: 55%
+
+      .twothousandthree-never
+        width: 4%
+
+      .twothousandthree-dunno
+        width: 4%
+
+      .twothousandthirteen-pre65
+        width: 29%
+
+      .twothousandthirteen-65older
+        width: 60%
+
+      .twothousandthirteen-never
+        width: 3%
+
+      .twothousandthirteen-dunno
+        width: 8%
+
+    &.age-35-44
+      .twothousandthree-pre65
+        width: 41%
+
+      .twothousandthree-65older
+        width: 46%
+
+      .twothousandthree-never
+        width: 5%
+
+      .twothousandthree-dunno
+        width: 8%
+        
+      .twothousandthirteen-pre65
+        width: 21%
+
+      .twothousandthirteen-65older
+        width: 62%
+
+      .twothousandthirteen-never
+        width: 9%
+
+      .twothousandthirteen-dunno
+        width: 8%
+
+    &.age-44-54
+      .twothousandthree-pre65
+        width: 37%
+
+      .twothousandthree-65older
+        width: 45%
+
+      .twothousandthree-never
+        width: 8%
+
+      .twothousandthree-dunno
+        width: 10%
+        
+      .twothousandthirteen-pre65
+        width: 24%
+
+      .twothousandthirteen-65older
+        width: 61%
+
+      .twothousandthirteen-never
+        width: 7%
+
+      .twothousandthirteen-dunno
+        width: 8%
+
+    &.age-55plus
+      .twothousandthree-pre65
+        width: 25%
+
+      .twothousandthree-65older
+        width: 49%
+
+      .twothousandthree-never
+        width: 8%
+
+      .twothousandthree-dunno
+        width: 18%
+        
+      .twothousandthirteen-pre65
+        width: 18%
+
+      .twothousandthirteen-65older
+        width: 61%
+
+      .twothousandthirteen-never
+        width: 11%
+
+      .twothousandthirteen-dunno
+        width: 10%
 
   .half_of_american_households
     @extend .spread
