--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -379,8 +379,21 @@ section
   &.padding
     padding: 1em
 
+  .field
+    margin-bottom: 2em
+
+    &.radio_buttons
+      label
+        margin: .25em 0
+
+        span
+          margin-left: .25em
+
   .field_title
-    font-size: 20px
+    font-size: 22px
+    line-height: 1.4
+    margin: 0 0 .25em 0
+    padding: 0
     text-transform: uppercase
 
     strong
@@ -391,11 +404,6 @@ section
       display: inline-block
       margin: 0 .5em
 
-  .field
-    &.radio_buttons
-      label
-        margin: .25em 0
-
   label
     display: block
     font-size: 18px
@@ -403,6 +411,23 @@ section
     strong
       font-family: $proxima-bold
       font-weight: normal
+
+
+input[type="radio"]
+  -webkit-appearance: none
+  -moz-appearance: none
+  display: inline-block
+  background-image: image-url("radio_button-open.png")
+  background-repeat: no-repeat
+  width: 25px
+  height: 25px
+  top: 8px
+
+  &:hover
+    background-image: image-url("radio_button-hover.png")
+
+  &:checked
+    background-image: image-url("radio_button-filled.png")
 
 
 // Charts
@@ -510,27 +535,3 @@ section
 
   100%
     opacity: .8
-
-input[type="radio"]
-  -webkit-appearance: none
-  -moz-appearance: none
-  display: inline-block
-  background-image: image-url("radio_button-open.png")
-  background-repeat: no-repeat
-  width: 25px
-  height: 25px
-  top: 8px
-  &:checked
-    background-image: image-url("radio_button-filled.png")
-
-
-
-
-
-
-
-
-
-
-
-
