--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -152,34 +152,27 @@
         @extend .major
 
   .age_and_retirement
+    @extend .blend-bottom
+
     .first
       font-size: 18px
       margin-bottom: 3em
 
     #under_65
       display: block
-    #over_65
+
+    #over_or_65
       display: none
 
     &.show_over_65
       #under_65
         display: none
-      #over_65
+
+      #over_or_65
         display: block
 
     .form_fields
       @extend .padding
-
-      .field.age,
-      .field.retiree
-        height: 50px
-
-        label
-          float: left
-          width: 45%
-
-        input
-          float: left
 
       .field.age
         input
@@ -190,6 +183,7 @@
           padding-top: 5px
 
   .retirement_expectations
+    @extend .blend-top
     @extend .age-all
 
     p
