--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -152,6 +152,8 @@
         @extend .major
 
   .age_and_retirement
+    @extend .blend-bottom
+    
     .first
       font-size: 18px
       margin-bottom: 3em
@@ -180,7 +182,8 @@
           line-height: 1
           padding-top: 5px
 
-  .retirement_expectations
+  .retirement_expectations  
+    @extend .blend-top
     @extend .age-all
 
     &.age-all,
